--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PROXY_TARGET=http://localhost:3000
 INDEX_HTML_PATH=index.html
 SOCKET_PROXY_TARGET=wss://localhost:443
+INDEX_HTML_PATH=index.html
+SOCKET_PROXY_TARGET=ws://localhost:443
+V1=/api/center/v1
