--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "local": "vue-cli-service serve --mode local"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "moment": "^2.29.4",
+    "rxjs": "^7.8.0",
+    "vue": "~2.7.10",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
